--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,11 @@ body {
   flex-direction: column;
 }
 
+header {
+  width: 100%;
+  text-align: center;
+}
+
 .header {
   color: var(--blanco);
   font-family: var(--main-font);
@@ -68,9 +73,7 @@ body {
 }
 
 .header-img {
-  background: center / contain no-repeat url(./images/juliana.jpeg);
-  border-radius: 50%;
-  border: 1px solid var(--gris-oscuro);
+  border-radius: 5%;
   box-shadow: 8px 16px 32px 0px var(--shadow);
   height: 300px;
   margin-top: 80px;
@@ -82,8 +85,13 @@ body {
   cursor: pointer;
   display: flex;
   justify-content: space-around;
-  margin: 24px 0;
+  margin: 24px auto;
   width: 50%;
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: var(--blanco);
 }
 
 .nav-item {
