--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ body {
 header {
   width: 100%;
   text-align: center;
+  background-color: var(--gris-oscuro);
 }
 
 .header {
@@ -76,7 +77,6 @@ header {
 
 .header-img {
   border-radius: 5%;
-  box-shadow: 8px 16px 32px 0px var(--shadow);
   height: 300px;
   margin-top: 80px;
   width: 300px;
@@ -227,6 +227,11 @@ input {
   margin-bottom: 48px;
   width: 150px;
   margin-left: auto;
+  font-size: 16px;
+}
+
+.send-button:hover {
+  background-color: #56912d;
 }
 
 .notification {
