--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,9 @@ header {
 input {
   outline: none;
   width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
 }
 
 .send-button {
