--- a/styles.css
+++ b/styles.css
@@ -122,8 +122,23 @@ header {
   align-items: center;
   display: flex;
   justify-content: space-around;
-  margin: 32px auto 0;
-  width: 20%;
+  padding-left: 15px;
+  margin: 35px auto 0;
+  max-width: fit-content;
+}
+
+.social-media li a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-link-text {
+  color: var(--blanco);
+  font-family: var(--secondary-font);
+  text-decoration: none;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .carousel {
